健康—+人寿保障提升

--- a/app/css/claim_information.css
+++ b/app/css/claim_information.css
@@ -24,9 +24,8 @@ span {
 	vertical-align: middle;
 	
 }
-img{
+.claim_controller img{
 	width: .2rem;
-	height: .2rem;
 	vertical-align: middle;
 }
 a{
