--- a/app/partials/about_nuobei.html
+++ b/app/partials/about_nuobei.html
@@ -1,5 +1,9 @@
 <!-- <link rel="stylesheet" href="css/about_nuobei.css?rev=ae4ad37c360dd52474bee1c696a3c0da"> -->
-
+<div class="nuobei_header">
+  <div class="img_ctrl"><img src="img/nuobei_header/logo640.png"></div>
+  <div class="back_homePage"><a href="http://wechat.nuobei.cn/#/index">回首页</a></div>
+  <div class="concern" id="foucs_button">关 注</div>
+</div>
 <div class="nuobei_ctrl">
 	<div class="nuobei">
 		<div class="nuobei_head">诺贝保险管家</div>
