--- a/app/partials/bdm_detail.html
+++ b/app/partials/bdm_detail.html
@@ -1,5 +1,10 @@
 <link rel="stylesheet" type="text/css" href="css/bdm_detail.css?rev=9eb028f721638fe2d92cbe55d061c78a">
 <div ng-if="isTest == false"  cg-busy="loadingPromise" style="margin-bottom: 50px;">
+	<div class="nuobei_header">
+		<div class="img_ctrl"><img src="img/nuobei_header/logo640.png"></div>
+		<div class="back_homePage"><a href="http://wechat.nuobei.cn/#/index">回首页</a></div>
+		<div class="concern" id="foucs_button">关 注</div>
+	</div>
 	<div class="wrapper " id="my_baodan">
 		<img src="img/yiyanzhen.png"  ng-show="data.status==3" style="position: absolute;top:9px;right:11px;width:70px;z-index: 5;">
 		<div class="container" >
