--- a/app/partials/bdm_list.html
+++ b/app/partials/bdm_list.html
@@ -1,7 +1,13 @@
 <link rel="stylesheet" type="text/css" href="css/bdm_list.css?rev=1a758ccd04550e9103b821164fec34a9">
+<div class="nuobei_header">
+	<div class="img_ctrl"><img src="img/nuobei_header/logo640.png"></div>
+	<div class="back_homePage"><a href="http://wechat.nuobei.cn/#/index">回首页</a></div>
+	<div class="concern" id="foucs_button">关 注</div>
+</div>
 <header>
 	<div class="left">
 		<!--
+		
 		<img src="../img/toubao_type.jpg"  />
 			<img src="../img/nuo.png"  />
 		-->
@@ -137,8 +143,6 @@
 	点击上传 进行保单管理
 	<div></div>
 </div> -->
-<div class="cell pay_container">
-  <a href="javascript:void(0)" class="btn btn_dark_2_primary" ng-click="goBdUpload();" style="border-radius: 0px;">
-			<i class="iconfont"  style="font-size: 16px;color:#95b9e8">&#xe621;</i>&nbsp;上传保单</a>
+<div class="bottom_ctrl">
+	<div class="finish" ng-click="goBdUpload();"><i class="iconfont"  style="font-size: 16px;color:#95b9e8">&#xe621;</i> 上传保单</div>
 </div>
-
