--- a/app/partials/claim_information.html
+++ b/app/partials/claim_information.html
@@ -1,5 +1,9 @@
 <link rel="stylesheet" href="css/claim_information.css">
-
+<div class="nuobei_header">
+	<div class="img_ctrl"><img src="img/nuobei_header/logo640.png"></div>
+	<div class="back_homePage"><a href="http://wechat.nuobei.cn/#/index">回首页</a></div>
+	<div class="concern" id="foucs_button">关 注</div>
+</div>
 <ul class="claim_controller" data-ng-init="init()" >
 	<li ng-repeat="item in data.items">
 		<p><img src="img/claim_information/logo.jpg" ><span>{{item.title}}</span></p>
