--- a/app/partials/hobby.html
+++ b/app/partials/hobby.html
@@ -1,5 +1,10 @@
 <link rel="stylesheet" href="css/preference.css?rev=359c09af8ee65e58a58cdd0592e87b2d">
 <!-- <link rel="stylesheet" href="css/preference.css?rev=359c09af8ee65e58a58cdd0592e87b2d"> -->
+<div class="nuobei_header">
+	<div class="img_ctrl"><img src="img/nuobei_header/logo640.png"></div>
+	<div class="back_homePage"><a href="http://wechat.nuobei.cn/#/index">回首页</a></div>
+	<div class="concern" id="foucs_button">关 注</div>
+</div>
 <div class="hobby">
 	<div class="piont">保障偏好</div>
 	<label class="switch needsclick">
@@ -18,5 +23,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="target_btn" ng-click="goScheme()">生成方案</div>
+	<div class="bottom_ctrl">
+		<div class="finish" ng-click="goScheme()">完 成</div>
+	</div>
 </div>
