--- a/app/partials/newindex_part.html
+++ b/app/partials/newindex_part.html
@@ -63,7 +63,9 @@
           <i class="iconfont arrow_size" >&#xe60f;</i>
           </div>
 
-            <div class="pannel__body__item"  ng-click="goBaodan(1)">
+            <!-- <div class="pannel__body__item"  ng-click="goBaodan(1)"> -->
+            <!-- 二期修改   *tailu*-->
+            <div class="pannel__body__item"  ng-click="goContinue()">
           <i class="iconfont icon_size" >&#xe62f;</i>
           <div class="pannel__body__item_bar"> 
             <div class="pannel__body__item_yiyou">家庭保障</div>
@@ -71,7 +73,7 @@
           <i class="iconfont arrow_size"  >&#xe60f;</i>
           </div> 
     
-         <div class="pannel__body__item"  ng-click="goBaodan(5)">
+         <div class="pannel__body__item"  ng-click="goContinue()">
           <i class="iconfont icon_size" >&#xe618;</i>
           <div class="pannel__body__item_bar"> 
             <div class="pannel__body__item_yiyou">财产保障</div>
@@ -113,7 +115,9 @@
           <i class="iconfont arrow_size" >&#xe60f;</i>
           </div> 
       
-          <div class="pannel__body__item"  ng-click="goPromote(1)">
+          <!-- <div class="pannel__body__item"  ng-click="goPromote(1)"> -->
+          <!-- 二期修改   *tailu*-->
+          <div class="pannel__body__item"  ng-click="goTarget()">
           <i class="iconfont icon_size" styl>&#xe62f;</i>
           <div class="pannel__body__item_bar">  
             <div class="pannel__body__item_head">家庭保障</div>
