--- a/app/partials/scheme.html
+++ b/app/partials/scheme.html
@@ -1,4 +1,9 @@
 <link rel="stylesheet" href="css/scheme.css?rev=7bd3254469de8b9099e79791624be219">
+<div class="nuobei_header">
+	<div class="img_ctrl"><img src="img/nuobei_header/logo640.png"></div>
+	<div class="back_homePage"><a href="http://wechat.nuobei.cn/#/index">回首页</a></div>
+	<div class="concern" id="foucs_button">关 注</div>
+</div>
 <div class="scheme-contrller" data-ng-init="init()"  cg-busy="schemaPromise">
 	
 	<div class="main-contrller">
@@ -17,5 +22,6 @@
 		<div class="marBtn"></div>
 	</div>
 </div>
-
-<div class="scheme_btn" ng-click="goKeySolution()">查看方案详情</div>
+<div class="bottom_ctrl">
+	<div class="finish" ng-click="goKeySolution()">查看方案详情</div>
+</div>
