--- a/app/partials/userinfo_new.html
+++ b/app/partials/userinfo_new.html
@@ -1,5 +1,10 @@
 <link rel="stylesheet" href="css/userinfo.css?rev=c4bd06a38e71d1a052ca411463949e77">
 <link rel="stylesheet" href="css/userinfo_new.css?rev=432ce1d5947e69931411b158c31e432c">
+<div class="nuobei_header">
+	<div class="img_ctrl"><img src="img/nuobei_header/logo640.png"></div>
+	<div class="back_homePage"><a href="http://wechat.nuobei.cn/#/index">回首页</a></div>
+	<div class="concern" id="foucs_button">关 注</div>
+</div>
 <div class="userinfo_new"> 
 	<div class="setting">设定被保人资料</div> 
 	<div class=" highest">是否家庭收入主要贡献者</div>
@@ -21,4 +26,6 @@
 	<div class="age" style="position: relative;">年收入<span class="blue" id="yearIncomeId" style="font-size: 18px;">0</span><span class="blue" id="sui" style="margin:0;padding:0;">万</span><div class="year_mask"></div></div>
     <div id="yearIncome"></div>
 </div>
-<div class="target_btn" ng-click="goHobby()">下一步</div>
+<div class="bottom_ctrl">
+	<div class="finish" ng-click="goHobby()">完 成</div>
+</div>
