--- a/app/sass/jk_bzts.scss
+++ b/app/sass/jk_bzts.scss
@@ -5,12 +5,14 @@ body {
 }
 .jk_bzts {
 	background: #fff;
-	padding: 15px 10px;
+	padding: 15px 10px 0;
 	margin-bottom: 10px;
 	@include border(001px 0,#ccc);
 	.jk_bzts_tit {
 		font-size: 15px;
 		color: #444;
+		line-height: 15px;
+		margin-bottom: 8px;
 	}
 	.jk_bzts--blue {
 		color: #6fa5ff;
@@ -18,26 +20,9 @@ body {
 	.jk_bzts_prompt {
 		color: #999;
 		font-size: 13px;
+		line-height: 13px;
 	}
-}
-.bottom_ctrl {
-	@include border(0 0 1px 0,#ccc);
-	width: 100%;
-	position: fixed;
-	bottom: 0;
-	height: 49px;
-	background: #fff;
-	box-sizing: border-box;
-	padding: 4.5px 0;
-	.finish {
-		height: 40px;
-		width: 250px;
-		background: #4285f4;
-		font-size: 15px;
-		color: #fff;
-		text-align: center;
-		line-height: 40px;
-			margin: 0 auto;
-			border-radius: 5px;
+	.bottom_container {
+		padding: 25px 15px 34px;
 	}
 }
