--- a/app/css/bd_education_new.css
+++ b/app/css/bd_education_new.css
@@ -22,7 +22,7 @@ header.icon_2 {
   display: -moz-box;
   display: -ms-flexbox;
   display: flex;
-  padding: 15px; }
+  padding: 7px 15px; }
   .table-title .bd_mx {
     -webkit-box-flex: 1;
     -webkit-flex: 1;
@@ -31,12 +31,15 @@ header.icon_2 {
     flex: 1;
      }
   .table-title .bd_word {
-    -webkit-box-flex: 1;
-    -webkit-flex: 1;
-    -moz-box-flex: 1;
-    -ms-flex: 1;
-    flex: 1;
-    text-align: right; }
+    width: 76px;
+    height: 31px;
+    box-sizing: border-box;
+    border: 1px solid #ccc;
+    text-align: center;
+    line-height: 31px;
+    color: #4285f4;
+    border-radius: 5px;
+    font-size: 13px; }
 header .how {
   float: right;
   vertical-align: middle;
@@ -124,6 +127,61 @@ header .how {
       font-size: 15px;
       text-align: center;
       border-bottom: 1px solid #e2e2e2; }
-.btn_n_primary_new {
+.bd_education_bottom {
+  width: 100%;
+  position: relative;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  padding: 4.5px 35px;
+  box-sizing: border-box;
+  background: #fff;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex; }
+  .bd_education_bottom::after {
+    pointer-events: none;
+    position: absolute;
+    z-index: 999;
+    top: 0;
+    left: 0;
+    content: "\0020";
+    border-color: #ccc;
+    border-style: solid;
+    border-width: 1px 0 0 0;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-transform-origin: 0 0;
+    transform-origin: 0 0; }
+    @media (min--moz-device-pixel-ratio: 1.5), (-webkit-min-device-pixel-ratio: 1.5), (min-device-pixel-ratio: 1.5), (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+      .bd_education_bottom::after {
+        width: 200%;
+        height: 200%;
+        -webkit-transform: scale(0.5);
+        transform: scale(0.5); } }
+    @media (min--moz-device-pixel-ratio: 2.5), (-webkit-min-device-pixel-ratio: 2.5), (min-device-pixel-ratio: 2.5), (min-resolution: 240dpi), (min-resolution: 2.5dppx) {
+      .bd_education_bottom::after {
+        width: 200%;
+        height: 200%;
+        -webkit-transform: scale(1/3);
+        transform: scale(1/3); } }
+.bottom_left, .bottom_right {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -moz-box-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  height: 41px;
   color: #fff;
-  background-color: #006ee9; }
+  background-color: #4285f4;
+  border-radius: 5px;
+  line-height: 41px;
+  box-sizing: border-box;
+  text-align: center; }
+.bottom_left {
+  background: #fff;
+  color: #444;
+  border: 1px solid #ccc;
+  margin-right: 10px; }
