--- a/app/partials/bd_list.html
+++ b/app/partials/bd_list.html
@@ -1,5 +1,9 @@
 <link rel="stylesheet" type="text/css" href="css/baodan.css?rev=2493a984c3759762f74da4127bcf831e">
-
+    <div class="nuobei_header">
+      <div class="img_ctrl"><img src="img/nuobei_header/logo640.png"></div>
+      <div class="back_homePage"><a href="http://wechat.nuobei.cn/#/index">回首页</a></div>
+      <div class="concern" id="foucs_button">关 注</div>
+    </div>
     <div class="cell" style="color:#555;background: #fff;">
       <div class="cell_hd  cell_primary item" ng-class='{"red":tog==""}' ng-click='tog=""'>全部</div>
       <div class="cell_hd  cell_primary item" ng-class='{"red":tog=="1"}' ng-click='tog="1"'>待支付</div>
