--- a/app/partials/contact.html
+++ b/app/partials/contact.html
@@ -1,5 +1,8 @@
-
-
+<div class="nuobei_header">
+  <div class="img_ctrl"><img src="img/nuobei_header/logo640.png"></div>
+  <div class="back_homePage"><a href="http://wechat.nuobei.cn/#/index">回首页</a></div>
+  <div class="concern" id="foucs_button">关 注</div>
+</div>
 <div class="contact_ctrl">
 	<div class ="contact_head">
 		<img src="img/contact/logo.png">
