--- a/app/partials/pay_select_new.html
+++ b/app/partials/pay_select_new.html
@@ -162,16 +162,7 @@ body{
 	</form>
 </div>
 
-<div style="padding:30px 0;">
-	<div class="cell"  style="overflow: hidden;position: fixed;bottom:0;width:100%;border-radius:0;">
-		<a href="javascript:void(0)" class="btn btn_n_primary "  ng-click="submit()">立即支付</a>
-	</div>
-</div>
-<script type="text/javascript">
-/*
- $(".pay_item").click(function(){
- 	$(".pay_item").removeClass("choose");
- 	$(this).addClass("choose");
- })	*/
 
-</script>
+<div class="bottom_ctrl">
+	<div class="finish" ng-click="submit()">立即支付</div>
+</div>
