--- a/app/partials/select_part.html
+++ b/app/partials/select_part.html
@@ -1,5 +1,10 @@
 
 <script src="js/slider_component.js?rev=afafafafafafafafsaffafaa"></script>
+<div class="nuobei_header">
+	<div class="img_ctrl"><img src="img/nuobei_header/logo640.png"></div>
+	<div class="back_homePage"><a href="http://wechat.nuobei.cn/#/index">回首页</a></div>
+	<div class="concern" id="foucs_button">关 注</div>
+</div>
 <div  class="select-contrl"  data-ng-init="init()" style="overflow: hidden;"  cg-busy="selectPromise" >
 	<!--
 	<div  class="head-container" style="overflow: hidden;" >
@@ -12,7 +17,7 @@
 	-->
 	<div  class="bt_container">
 	
-		<i class="iconfont" style="font-size: 18px;color:#588DD4;vertical-align: -2px;">&#xe603;</i>
+		<i class="iconfont" style="font-size: 18px;color:#4285f4;vertical-align: -2px;">&#xe603;</i>
 		选择保障项目
 	</div>
 	<div style="position: relative;margin: 0 10px;box-sizing: border-box;" id="clockContainer">
@@ -37,7 +42,7 @@
 		<div id="log"></div>
 	</div>
 
-	<div  class="bt_container">
+	<div  class="bt_container" ng-hide="type==2">
 		<div style="line-height: 25px;">
 			<i class="iconfont" style="font-size: 18px;color:#588DD4;vertical-align: -2px;">&#xe603;</i> 选择保障金额
 			<div class="score2_container">
@@ -57,7 +62,7 @@
 	-->
     </div>
 
-<div  class="bottom_container" id="customerSlider">
+<div  class="bottom_container" id="customerSlider" ng-hide="type==2">
 	
 	<div class="weui_progress_bar" >
 		<div class="weui_progress_inner_bar" id="bar" style="width: 16px;">
@@ -118,7 +123,7 @@
 	</div>
 </div>
 
-<div ng-show="type==2">
+<!-- <div ng-show="type==2">
 	<div  class="bt_container">
 		<div style="line-height: 25px;">
 			<img src="img/global/dun.png" class="dun">
@@ -134,7 +139,7 @@
 			
 		</div>
 	</div>
-</div>
+</div> -->
 
 
 <div class="mask" id="popup">
@@ -153,8 +158,8 @@
 </div>
 
 <!-- 健康and寿险 -->
-<!-- <div class="sx-bzts_modify" ng-show="type==2">
-		<div class="sx-bzts_modify_Left"><i class="iconfont" style="font-size: 17px;color: #4285f4;margin-right：5px;">&#xe603;</i> 保险金额:<span class="colorBlue"> 30万</span> <span class="sx-bzts_modify_Left--colorGray"> ( 推荐值 )</span>
+<div class="sx-bzts_modify" ng-show="type==2">
+		<div class="sx-bzts_modify_Left"><i class="iconfont" style="font-size: 17px;color: #4285f4;margin-right：5px;">&#xe603;</i> 保险金额：<span class="colorBlue"> 30万</span> <span class="sx-bzts_modify_Left--colorGray"> ( 推荐值 )</span>
 		</div>
 		<div class="sx-bzts_modify_Left" style="padding-left: 22px;">保障期间：<span class="colorBlue">30年期</span></div>
 		<div class="sx-bzts_modify_Left" style="padding-left: 22px;">重疾<span class="colorBlue">20年期</span> 医疗报销及其他<span class="colorBlue">1年期</span></div>
@@ -162,14 +167,14 @@
 	</div>
 <div class="sx-bzts_bottom"  ng-show="type==2">
 	<div class="sx-bzts_bottom-word">
-		<div class="sx-bzts_bottom-word--Left">总 <span>6.5</span> 分</div>
-		<div class="sx-bzts_bottom-word--Right"><span>34903</span> 元</div>
+		<div class="sx-bzts_bottom-word--Left" id="sum_score">总 <span>{{data.scoreFix }}</span> 分</div>
+		<div class="sx-bzts_bottom-word--Right" id="estimateMoneyContainer"><span>{{data.premium}}</span> 元</div>
 	</div>
-	<div class="sx-bzts_bottom-btn">生成方案</div>
-</div> -->
+	<div class="sx-bzts_bottom-btn" ng-click="goBz()">生成方案</div>
+</div>
 <!-- end -->
 
-<div class="fix_container select_btn">
+<div class="fix_container select_btn" ng-hide="type==2">
 	<div class="left" style="width: 65%;height: 48px;">
         <a class="left_btn left">
 			总 
