--- a/app/partials/temai_detail.html
+++ b/app/partials/temai_detail.html
@@ -1,4 +1,9 @@
 <link rel="stylesheet" type="text/css" href="/css/temai_detail.css?rev=012d87e353b8d3c9e7ecb65a89977dd0">
+<div class="nuobei_header">
+	<div class="img_ctrl"><img src="img/nuobei_header/logo640.png"></div>
+	<div class="back_homePage"><a href="http://wechat.nuobei.cn/#/index">回首页</a></div>
+	<div class="concern" id="foucs_button">关 注</div>
+</div>
 <div  cg-busy="myPromise" class="temaidetail-wrapper" >
 	<header>
 		<div class="top-container" >
