--- a/app/partials/temai_list.html
+++ b/app/partials/temai_list.html
@@ -1,5 +1,10 @@
 
 <link rel="stylesheet" type="text/css" href="css/temai_list.css?rev=0e539480736a12281b466e8fa72795cb">
+<div class="nuobei_header">
+	<div class="img_ctrl"><img src="img/nuobei_header/logo640.png"></div>
+	<div class="back_homePage"><a href="http://wechat.nuobei.cn/#/index">回首页</a></div>
+	<div class="concern" id="foucs_button">关 注</div>
+</div>
 <div cg-busy="listPromise">
 <div class="nav" data-ng-init="init()" >
 	<div class="item" ng-class='{"select":category_id==nav.id}'ng-repeat="nav in navItems" ng-click='getCateList(nav.id)'>{{nav.name}}</div>
