--- a/app/partials/information.html
+++ b/app/partials/information.html
@@ -52,11 +52,17 @@
 		</div>
 	</div>
 </div>
-<div class="cut_container" >
+<!-- <div class="cut_container" >
 	<a class="cut_cell" ng-click="showTip()">
 		部分情况有
 	</a>
 	<a class="cut_cell" ng-click="goToubao()">
 		以上情况全无
 	</a>
+</div> -->
+<div class="bd_education_bottom" >
+	<div class="bottom_left " ng-click="showTip()" id="submitButton" > 部分情况有
+    </div>
+    <div class="bottom_right " ng-click="goToubao()" id="submitButton" > 以上情况全无
+    </div>
 </div>
