--- a/app/partials/toubao_new.html
+++ b/app/partials/toubao_new.html
@@ -152,11 +152,16 @@
 </div>
 
 
-<div class="fix_container">
+<!-- <div class="fix_container">
 		<div class="footer">
 		<a href="javascript:void(0)" class="btn btn_n_primary left" >投保金额<span class="money">  {{money}}</span>元</a>
 		<a href="javascript:void(0)" class="btn btn_n_primary right" ng-click="submit()">立即投保</a>
 		</div>
+</div> -->
+<div class="sx-bzts_bottom">
+	<div class="sx-bzts_bottom-word" style="">
+		投保金额 <span class="buttom_money">{{money}}</span> 元
+	</div>
+	<div class="sx-bzts_bottom-btn btn_n_primary right" ng-click="submit()">立即投保</div>
 </div>
-
 
