--- a/app/sass/sx_bzts.scss
+++ b/app/sass/sx_bzts.scss
@@ -89,24 +89,24 @@
  .sx-bzts_bottom-word {
  	@include flex(1);
  }
- .sx-bzts_bottom-btn {
- 	height: 40px;
- 	width: 120px;
- 	background: #4285f4;
- 	color: #fff;
- 	font-size: 15px;
- 	text-align: center;
- 	line-height: 40px;
- 	border-radius: 5px;
- }
- .sx-bzts_bottom-word--Left {
- 	color: #444;
- 	line-height: 40px;
- 	display: inline-block;
- }
- .sx-bzts_bottom-word--Right {
- 	margin-left: 5px;
- 	color: #ff9000;
- 	line-height: 40px;
- 	display: inline-block;
- }
+ // .sx-bzts_bottom-btn {
+ // 	height: 40px;
+ // 	width: 120px;
+ // 	background: #4285f4;
+ // 	color: #fff;
+ // 	font-size: 15px;
+ // 	text-align: center;
+ // 	line-height: 40px;
+ // 	border-radius: 5px;
+ // }
+ // .sx-bzts_bottom-word--Left {
+ // 	color: #444;
+ // 	line-height: 40px;
+ // 	display: inline-block;
+ // }
+ // .sx-bzts_bottom-word--Right {
+ // 	margin-left: 5px;
+ // 	color: #ff9000;
+ // 	line-height: 40px;
+ // 	display: inline-block;
+ // }
