--- a/app/wx_share/partials/bd_part.html
+++ b/app/wx_share/partials/bd_part.html
@@ -107,8 +107,12 @@
 		<form>
     </div>
 </div>
-<footer class="bd_footer">
+<!-- <footer class="bd_footer">
 	 <div  ng-click='submit()' id="submitButton"  >立即投保</div>
+</footer> -->
+
+<footer class="bottom_ctrl">
+	<div class="finish" ng-click='submit()' id="submitButton">立即投保</div>
 </footer>
 
  
