--- a/app/sass/globe.scss
+++ b/app/sass/globe.scss
@@ -202,7 +202,7 @@ input::-webkit-input-speech-button {
 .btn_n_primary {
   color: #fff;
   /*background-color: #247ad1;*/
-  background-color: #1e4e8e;
+  background-color: #4285f4;
 }
 .btn_dark_primary {
   color: #fff;
@@ -232,7 +232,7 @@ input::-webkit-input-speech-button {
 
   /*border:1px solid #9c9c9c;*/
   color: #535353;
-  background-color: #e3e3e3;
+  background-color: #ccc;
 }
 .btn_blue {
   font-size: 0.18rem;
@@ -591,6 +591,7 @@ font-size:22px;font-style:normal;}
 		}
 	}
 }
+// 底部按钮 一个按钮
 .bottom_ctrl {
   @include border(1px 0 0 0,#ccc);
   width: 100%;
@@ -617,3 +618,81 @@ font-size:22px;font-style:normal;}
 .finish:active {
   background: #266ada;
 }
+// 底部按钮 左右两个button
+.bd_education_bottom {
+    width: 100%;
+    @include border(1px 0 0 0,#ccc);
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    padding: 4.5px 35px;
+    box-sizing: border-box;
+    background: #fff;
+    @include flexbox;
+  }
+  .bottom_left,.bottom_right {
+    @include flex(1);
+    height: 41px;
+    color:#fff;
+    background-color: #4285f4;
+    border-radius: 5px;
+    line-height: 41px;
+    box-sizing: border-box;
+    text-align: center;
+  }
+  .bottom_left {
+    background: #fff;
+    color: #444;
+    border: 1px solid #ccc;
+    margin-right: 10px;
+  }
+  // 底部按钮 生成方案
+  .sx-bzts_bottom {
+  @include border(1px 0 0 0,#ccc);
+  position: fixed;
+  bottom: 0;
+  height: 49px;
+  width: 100%;
+  box-sizing: border-box;
+  @include flexbox;
+  padding: 4.5px 10px;
+  font-size: 15px; 
+  color: #444;
+  background: #fff;
+  z-index: 9999;
+ }
+ .buttom_money {
+    color: #ff5c00;
+    font-weight: bold;
+    font-size: 18px;
+    margin-left: 6px;
+ }
+    
+ .sx-bzts_bottom-word {
+  @include flex(1);
+  text-align:center;line-height: 40px;
+ }
+ .sx-bzts_bottom-btn {
+  height: 40px;
+  width: 120px;
+  // background: #4285f4;
+  color: #fff;
+  font-size: 15px;
+  text-align: center;
+  line-height: 40px;
+  border-radius: 5px;
+ }
+ .back_color {
+  background: #4285f4;
+ }
+ .sx-bzts_bottom-word--Left {
+  color: #444;
+  line-height: 40px;
+  display: inline-block;
+ }
+ .sx-bzts_bottom-word--Right {
+  margin-left: 5px;
+  color: #ff9000;
+  line-height: 40px;
+  display: inline-block;
+ }
