--- a/app/sass/wx_share/bd_part.scss
+++ b/app/sass/wx_share/bd_part.scss
@@ -202,21 +202,7 @@ body {
 .font_red {
   color: #ff5c00;
 }
-.bd_footer {
-  width: 100%;
-  height: .48rem;
-  background: #1e4e8e;
-  /*border-top: 1px solid #003756;
-  border-bottom: 1px solid #003756;*/
-  text-align: center;
-  line-height: .48rem;
-  color: #fff;
-  font-size: .14rem;
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  overflow: auto;
-}
+
 /*ios底部fixed失效的问题的解决方案*/
 .wrapper {
    position: fixed;
@@ -226,4 +212,31 @@ body {
     overflow-y: scroll;
     -webkit-overflow-scrolling: touch;
 
+}
+
+.bottom_ctrl {
+  @include border(1px 0 0 0,#ccc);
+  width: 100%;
+  position: fixed;
+  bottom: 0;
+  height: 49px;
+  background: #fff;
+  box-sizing: border-box;
+  padding: 4.5px .35rem;
+    z-index: 9999;
+  .finish {
+    height: 40px;
+    // width: 250px;
+    background: #4285f4;
+    font-size: 15px;
+    color: #fff;
+    text-align: center;
+    line-height: 40px;
+    margin: 0 auto;
+    border-radius: 5px;
+    z-index: 9999;
+  }
+}
+.finish:active {
+  background: #266ada;
 }
