--- a/app/wx_share/css/bd_part.css
+++ b/app/wx_share/css/bd_part.css
@@ -267,20 +267,6 @@ body {
 .font_red {
   color: #ff5c00; }
 
-.bd_footer {
-  width: 100%;
-  height: .48rem;
-  background: #1e4e8e;
-  
-  text-align: center;
-  line-height: .48rem;
-  color: #fff;
-  font-size: .14rem;
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  overflow: auto; }
-
 
 .wrapper {
   position: fixed;
@@ -289,3 +275,53 @@ body {
   
   overflow-y: scroll;
   -webkit-overflow-scrolling: touch; }
+
+.bottom_ctrl {
+  position: relative;
+  width: 100%;
+  position: fixed;
+  bottom: 0;
+  height: 49px;
+  background: #fff;
+  box-sizing: border-box;
+  padding: 4.5px .35rem;
+  z-index: 9999; }
+  .bottom_ctrl::after {
+    pointer-events: none;
+    position: absolute;
+    z-index: 999;
+    top: 0;
+    left: 0;
+    content: "\0020";
+    border-color: #ccc;
+    border-style: solid;
+    border-width: 1px 0 0 0;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-transform-origin: 0 0;
+    transform-origin: 0 0; }
+    @media (min--moz-device-pixel-ratio: 1.5), (-webkit-min-device-pixel-ratio: 1.5), (min-device-pixel-ratio: 1.5), (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+      .bottom_ctrl::after {
+        width: 200%;
+        height: 200%;
+        -webkit-transform: scale(0.5);
+        transform: scale(0.5); } }
+    @media (min--moz-device-pixel-ratio: 2.5), (-webkit-min-device-pixel-ratio: 2.5), (min-device-pixel-ratio: 2.5), (min-resolution: 240dpi), (min-resolution: 2.5dppx) {
+      .bottom_ctrl::after {
+        width: 200%;
+        height: 200%;
+        -webkit-transform: scale(1/3);
+        transform: scale(1/3); } }
+  .bottom_ctrl .finish {
+    height: 40px;
+    background: #4285f4;
+    font-size: 15px;
+    color: #fff;
+    text-align: center;
+    line-height: 40px;
+    margin: 0 auto;
+    border-radius: 5px;
+    z-index: 9999; }
+
+.finish:active {
+  background: #266ada; }
