--- a/app/partials/solution.html
+++ b/app/partials/solution.html
@@ -61,7 +61,7 @@
 	<div class="sx-bzts_bottom-word" style="">
 		应交保费 <span class="buttom_money">{{sumMoney}}</span> 元
 	</div>
-	<div class="sx-bzts_bottom-btn back_color right" ng-click="goInfo()">生成方案</div>
+	<div class="sx-bzts_bottom-btn back_color liji right" ng-click="goInfo()">立即投保</div>
 </div>
 <!-- <script type="text/javascript" src="js/zepto.min.js"></script> -->
 </div>
