--- a/app/partials/toubao_new.html
+++ b/app/partials/toubao_new.html
@@ -162,6 +162,6 @@
 	<div class="sx-bzts_bottom-word" style="">
 		投保金额 <span class="buttom_money">{{money}}</span> 元
 	</div>
-	<div class="sx-bzts_bottom-btn btn_n_primary right" ng-click="submit()">立即投保</div>
+	<div class="sx-bzts_bottom-btn btn_n_primary liji right" ng-click="submit()">立即投保</div>
 </div>
 
