simple auto commit

--- a/app/partials/select_part.html
+++ b/app/partials/select_part.html
@@ -103,7 +103,7 @@
 
 <!-- 健康and寿险 -->
 <div class="sx-bzts_modify" ng-show="type==2">
-		<div class="sx-bzts_modify_Left"><i class="iconfont" style="font-size: 17px;color: #4285f4;margin-right：5px;">&#xe603;</i> 保险金额：<span class="colorBlue"> {{insuredMoney}}万</span> <span class="sx-bzts_modify_Left--colorGray"> ( 推荐值 )</span>
+		<div class="sx-bzts_modify_Left"><i class="iconfont" style="font-size: 17px;color: #4285f4;margin-right：5px;">&#xe603;</i> 保险金额：<span class="colorBlue"> {{insuredMoney/10000}}万</span> <span class="sx-bzts_modify_Left--colorGray"> ( 推荐值 )</span>
 		</div>
 		<div class="sx-bzts_modify_Left" style="padding-left: 22px;">保障期间：<span class="colorBlue">{{coveragePeriod}}年期</span></div>
 		<div class="sx-bzts_modify_Left" style="padding-left: 22px;">重疾<span class="colorBlue">20年期</span> 医疗报销及其他<span class="colorBlue">1年期</span></div>
