simple auto commit

--- a/app/template/new/product_16.html
+++ b/app/template/new/product_16.html
@@ -74,40 +74,40 @@
 		<li class="qa-item  question">
 			<div class="qa-icon "></div>
 			<div class="qa-content">
-				<div>明天就要参加赛事了，想问下现在可以购买吗？</div>
+				<div>本产品认可的医院有哪些？</div>
 			</div>
 		</li>
 		<li class="qa-item answer">
 			<div class="qa-icon" ></div>
 			<div class="qa-content">
 				<div>
-					您好！这款“众行天下”马拉松保障计划最早的生效日期为网上投保的次日零时。您在需要参加马拉松前一天晚上24时之前完成投保并支付都是可以享受保障的。
+					您好！本产品认可的医院指保险公司指定的医院。若保险公司没有指定,则指国家卫生部医院等级分类中的二级或二级以上的医院。不包括康复医院或康复病房、精神病院、疗养院、护理院、戒酒或戒毒中心、精神心理治疗中心、无相应医护人员或设备的二级或三级医院的联合医院或联合病房。意外伤害需急诊救治的不受此限,但经急救病情稳定后,需转入保险公司认可的医院进行治疗。
 				</div>
 			</div>
 		</li>
 		<li class="qa-item  question">
 			<div class="qa-icon "></div>
 			<div class="qa-content">
-				<div>请问15岁的中学生参加马拉松比赛，可以投保吗？</div>
+				<div>请问保单如何验证？</div>
 			</div>
 		</li>
 		<li class="qa-item answer">
 			<div class="qa-icon" ></div>
 			<div class="qa-content">
-				<div>您好！这款“众行天下”马拉松保障计划的承保年龄为：16-65周岁，很抱歉未满16周岁暂时不能投保。</div>
+				<div>您好！投保完成后,电子保单会直接发送至您邮箱,为保证您的合法权益,您可在投保成功后的次日拨打中国人民人寿保险公司客服电话4008895518或通过访问官网对您所投保保单的相关信息进行查询。</div>
 			</div>
 		</li>
 		<li class="qa-item  question hide">
 			<div class="qa-icon "></div>
 			<div class="qa-content">
-				<div>请问投保成功后怎么查询保单？</div>
+				<div>意外医疗中是100%赔付，是不是我花了多少钱，就能得到多少理赔呢？</div>
 			</div>
 		</li>
 		<li class="qa-item answer hide">
 			<div class="qa-icon" ></div>
 			<div class="qa-content">
 				<div>
-					您好，投保成功后，我们将提供保单作为您的投保凭证。您可以通过以下方式查询您的保单：<br/>1.打开诺贝微信公众号，在“我的订单”中进行查询，或向您预留的邮箱发送电子保单；<br/>2.拨打诺贝400-992-0205客服电话查询；<br/>3.拨打中意财险400-600-2700客服电话查询；<br/>4.进入中意财险保险公司官网查询。
+					您好，这款产品有100元的免赔额，每次事故到医院治疗时要扣除100的免陪额，余下的部分按100%进行报销。保险期内所有次事故的意外医疗保险金额累计不能超过1万元。
 				</div>
 			</div>
 		</li>
