--- a/app/partials/bd_education_new.html
+++ b/app/partials/bd_education_new.html
@@ -115,9 +115,9 @@
 
 <div class="bd_education_bottom" >
 	<div class="bottom_left " ng-click="goDaodan()" id="submitButton" >
-        <i class="iconfont" style="font-size: 15px;color:#999">&#xe621;</i> 上传保单
+        <i class="iconfont" style="font-size: 15px;color:#999;vertical-align:-1px;">&#xe621;</i> 上传保单
     </div>
     <div class="bottom_right " ng-click="goDingzhi()" id="submitButton" >
-        <i class="iconfont" style="font-size: 15px;color:#fff;">&#xe602;</i> 提升保障
+        <i class="iconfont" style="font-size: 15px;color:#fff;vertical-align:-1px;">&#xe602;</i> 提升保障
     </div>
 </div>
