--- a/app/partials/sx_bzts.html
+++ b/app/partials/sx_bzts.html
@@ -29,7 +29,7 @@
 		<div class="sx-bzts_bottom-word--Left">总 <span>6.5</span> 分</div>
 		<div class="sx-bzts_bottom-word--Right"><span>34903</span>元</div>
 	</div>
-	<div class="sx-bzts_bottom-btn">生成方案</div>
+	<div class="sx-bzts_bottom-btn back_color">生成方案</div>
 </div>
 <script>
 	$(".sx-bzts_tit_choose_year .miss").click(function(){
