--- a/app/partials/target.html
+++ b/app/partials/target.html
@@ -20,6 +20,6 @@
 		</div>
 	</div>
 	<div class="bottom_ctrl">
-		<div class="finish" ng-click="goUserInfoNew()">完 成</div>
+		<div class="finish" ng-click="goUserInfoNew()">下一步</div>
 	</div>
 </div>
