--- a/app/partials/temai_index.html
+++ b/app/partials/temai_index.html
@@ -23,7 +23,12 @@
 }
 
 </style>
-<header>
+<div class="nuobei_header">
+	<div class="img_ctrl"><img src="img/nuobei_header/logo640.png"></div>
+	<div class="back_homePage">每款产品都由诺贝严选</div>
+	<div class="concern" id="foucs_button">关 注</div>
+</div>
+<!-- <header>
 	<div  class="logo-container">
 		<div class="logo">
 			<img src="img/temai/logo.png">
@@ -31,22 +36,22 @@
 	</div>
 	<div class = "div_inline left">	每款产品都由诺贝严选</div>
 	<a href="javascript:;" class="focus_btn right" id="foucs_button">关 注</a>
-</header>
-	<div class="swiper-container" >
-		<div class="swiper-wrapper">
-			<div class="swiper-slide item " >
-				<a href="/wx_share.html#index"><img src="http://7xvrkw.com1.z0.glb.clouddn.com/huodong-1.jpg"></a>
-			</div>
-			<div class="swiper-slide  item " >
-				<a href="/wx_share.html#jixian"><img src="http://7xvrkw.com1.z0.glb.clouddn.com/huodong-2.jpg"></a>
-			</div>
-			<div class="swiper-slide  item " >
-				<a href="/wx_share.html#special"><img src="http://7xvrkw.com1.z0.glb.clouddn.com/huodong_3.png"></a>
-			</div>
+</header> -->
+<div class="swiper-container" >
+	<div class="swiper-wrapper">
+		<div class="swiper-slide item " >
+			<a href="/wx_share.html#index"><img src="http://7xvrkw.com1.z0.glb.clouddn.com/huodong-1.jpg"></a>
 		</div>
-		
-		<!-- Add Pagination -->
-		<div class="swiper-pagination" style="text-align:center"></div>
+		<div class="swiper-slide  item " >
+			<a href="/wx_share.html#jixian"><img src="http://7xvrkw.com1.z0.glb.clouddn.com/huodong-2.jpg"></a>
+		</div>
+		<div class="swiper-slide  item " >
+			<a href="/wx_share.html#special"><img src="http://7xvrkw.com1.z0.glb.clouddn.com/huodong_3.png"></a>
+		</div>
+	</div>
+	
+	<!-- Add Pagination -->
+	<div class="swiper-pagination" style="text-align:center"></div>
 </div>
 <div class="nav">
 	<a href="javascript:" class="item" id="showShare"><img src="img/temai/nav-1.png"><div >0元抢</div></a>
