--- a/app/css/ring.css
+++ b/app/css/ring.css
@@ -369,7 +369,7 @@
   padding: 15px 0; }
 .sx-bzts_modify {
   position: relative;
-  padding: 15px 10px;
+  padding: 15px 10px 70px;
   line-height: 24px;
   font-size: 15px;
   position: relative; }
