--- a/app/partials/hobby.html
+++ b/app/partials/hobby.html
@@ -24,6 +24,6 @@
 		</div>
 	</div>
 	<div class="bottom_ctrl">
-		<div class="finish" ng-click="goScheme()">完 成</div>
+		<div class="finish" ng-click="goScheme()">下一步</div>
 	</div>
 </div>
