--- a/app/partials/userinfo_new.html
+++ b/app/partials/userinfo_new.html
@@ -27,5 +27,5 @@
     <div id="yearIncome"></div>
 </div>
 <div class="bottom_ctrl">
-	<div class="finish" ng-click="goHobby()">完 成</div>
+	<div class="finish" ng-click="goHobby()">下一步</div>
 </div>
