--- a/app/sass/globe.scss
+++ b/app/sass/globe.scss
@@ -513,12 +513,13 @@ overflow: hidden;
 /* svg 图标库*/
 @font-face {
   font-family: 'iconfont';
-  src: url('//at.alicdn.com/t/font_1471837378_7425.eot'); /* IE9*/
-  src: url('//at.alicdn.com/t/font_1471837378_7425.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('//at.alicdn.com/t/font_1471837378_7425.woff') format('woff'), /* chrome、firefox */
-  url('//at.alicdn.com/t/font_1471837378_7425.ttf') format('truetype'), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
-  url('//at.alicdn.com/t/font_1471837378_7425.svg#iconfont') format('svg'); /* iOS 4.1- */
+  src: url('//at.alicdn.com/t/font_1472091381_5453997.eot'); /* IE9*/
+  src: url('//at.alicdn.com/t/font_1472091381_5453997.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('//at.alicdn.com/t/font_1472091381_5453997.woff') format('woff'), /* chrome、firefox */
+  url('//at.alicdn.com/t/font_1472091381_5453997.ttf') format('truetype'), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
+  url('//at.alicdn.com/t/font_1472091381_5453997.svg#iconfont') format('svg'); /* iOS 4.1- */
 }
+                    
                     
 
 
@@ -553,6 +554,7 @@ font-size:22px;font-style:normal;}
 	font-size: 13px;
 	margin-left: 10px;
 	line-height: 34px;
+  color: #c2d4fb;
 	@include flex(1);
 	a {
 		color: #c2d4fb;
@@ -682,6 +684,9 @@ font-size:22px;font-style:normal;}
   line-height: 40px;
   border-radius: 5px;
  }
+  .sx-bzts_bottom-btn:active {
+    background: #266ada;
+  }
  .back_color {
   background: #4285f4;
  }
@@ -699,4 +704,7 @@ font-size:22px;font-style:normal;}
  // 立即投保 button_color
  .liji {
   background: #ff9000;
+ }
+  .liji:active{
+  background: #f57300;
  }
