--- a/app/sass/ring.scss
+++ b/app/sass/ring.scss
@@ -463,7 +463,7 @@
 // bottm底部(健康and寿险)
 .sx-bzts_modify {
 	@include border(1px 0 0 0,#ccc);
-	padding: 15px 10px;
+	padding: 15px 10px 70px;
 	line-height: 24px;
 	font-size: 15px;
 	position: relative;
