--- a/app/sass/toubao_new.scss
+++ b/app/sass/toubao_new.scss
@@ -122,27 +122,20 @@ body{
 		height:45px;
 		line-height: 45px;
 		padding-left:10px;
-		font-size:14px;
-		border-bottom:1px solid #e2e2e2;
-		margin-bottom: 8px;
+		font-size:15px;
+		// border-bottom:1px solid #e2e2e2;
+		@include border(0 0 1px 0,#e2e2e2);
+		// margin-bottom: 8px;
+		.state {
+        	color: #999;
+        	font-size: 13px;
+        	margin-left: 10px;
+        }
 	}
-	.description {
-		padding : 15px 10px;
-		color:#999;	
+	select{
+		border: none;
 	}
-
-	.new-title{
-		padding:10px;
-
-		.s-title{
-			color:#555;
-		}	
-		.s-des {
-			color:#999;	
-		}
-
-	}
-
+    
 	.supply-item{
 		@include flexbox;
 		padding-left:10px;
@@ -179,22 +172,43 @@ body{
 			width:35px;
 		}
 	}
+
 	.new-supply-item{
 		@include flexbox;
-		padding: 0 10px;
-
+		margin: 0 10px;
 		height:45px;
 		line-height: 45px;
-		margin-bottom:10px;
+		@include border(0 0 1px 0,#e2e2e2)
+
 		.introd{
 			width:70px;
-			@include border(0 0 1px 0,#e2e2e2)
-			// border:1px solid #e2e2e2;
+			color: #999;
+			font-size: 13px;
 		}
 		.content{
 			padding-right:10px;
 			@include flex(1);
-			@include border(0 0 1px 0,#e2e2e2)
+			// @include border(0 0 1px 0,#e2e2e2)
+		}
+		.content input::input-placeholder {
+		  color: #ccc;
+		  font-size: 13px;
+		}
+		.content input::-webkit-input-placeholder {
+		  color: #ccc;
+		  font-size: 13px;
+		}
+		.content input::-moz-input-placeholder {
+		  color: #ccc;
+		  font-size: 13px;
+		}
+		.content input::-webkit-input-placeholder {
+		  color: #ccc;
+		  font-size: 13px;
+		}
+		.content input::-ms-input-placeholder {
+		  color: #ccc;
+		  font-size: 13px;
 		}
 		.new-input {
 			width:100%;
@@ -215,6 +229,17 @@ body{
 			width:35px;
 			@include border(0 0 1px 0,#e2e2e2)
 		}
+	}
+	.new-supply-item--last {
+		margin: 0;
+		padding: 0 10px;
+		@include border(0 0 1px 0,#ccc);
+	}
+	.kong{
+		height: 10px;
+		width: 100%;
+		background: #f5f5f5;
+
 	}
 	.wrong-item{
 		@include flexbox;
